<resources>
    <string name="app_name">LostandFound</string>
    <string name="location">Current Location</string>
    <string name="change_location">Search elsewhere</string>
    <string name="new_entry">+</string>
    <string name="input_item_name">Name of the item</string>
    <string name="input_item_name_label">Name</string>
    <string name="input_item_content">What exactly have you found/lost?</string>
    <string name="input_item_description">Description</string>
    <string name="input_item_description_label">Describe your item</string>
    <string name="input_date">Date</string>
    <string name="input_date_label">When did you lose it?</string>
    <string name="input_item_place_label">Where did you lose it?</string>
    <string name="input_category">Category</string>
    <string name="button_add">Add</string>
    <string name="title_activity_maps">Map</string>


    <string name="label_location_tracking">Location Tracking</string>
    <string name="label_geolocator">Geocoding</string>
    <string name="location_default_text">45.00</string>
    <string name="location_default_location">No Address Available</string>
    <string name="input_contact">Contact</string>
    <string name="post_options_prompt">Have you Lost or Found something?</string>
    <string name="spinner_option_text">Have you Lost or Found something?</string>
    <string name="mapsDialogMessage">Set location to</string>
    <string name="mapsDialogTitle">Confirm selection</string>
    <string name="mapsDialogYes">Yes</string>
    <string name="mapsDialogNo">No, place marker again</string>
    <string name="how_can_you_be_reached">How can you be reached?</string>
    <string name="search_bar_hint">Enter address</string>
    <string name="input_place">place</string>
    <string name="list_item_nested_textview">Have you lost or found something?</string>
    <string name="spinner_category_text">Category</string>
    <string name="spam_button">Mark as Spam</string>
    <string name="captcha_hint">Enter upper chars</string>
    <string name="captcha_label">Validation</string>


    <string-array name="post_options_array">
        <item>Lost</item>
        <item>Found</item>
    </string-array>


</resources>
