<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lostandfound.mi.ur.de.lostandfound.NewEntryActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_category"
        android:id="@+id/input_category_text"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_item_name"
        android:id="@+id/input_name_text"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/input_name_edit"
        android:hint="@string/input_item_name"
        android:singleLine="true"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/input_content_edit"
        android:hint="@string/input_item_content"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/input_description_edit"
        android:hint="@string/input_item_description"
        android:layout_marginBottom="5dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/input_date"
        android:id="@+id/input_date_text"
        android:elegantTextHeight="false"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/input_date"
        android:inputType="date"
        android:id="@+id/input_date_edit"

        android:singleLine="true"
        android:layout_marginBottom="16dp"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/publish_entry_button"
        android:layout_marginBottom="16dp"
        />


</LinearLayout>