<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lostandfound.mi.ur.de.lostandfound.NewEntryActivity"
    android:orientation="horizontal">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Name"
                android:id="@+id/name_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Category"
                android:id="@+id/category_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Description"
                android:maxLines="1"
                android:id="@+id/description_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_date"
                android:id="@+id/date_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_place"
                android:id="@+id/place_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_contact"
                android:id="@+id/contact_detail_view_label"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>


        </LinearLayout>
    </ScrollView>





    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Name"
                android:id="@+id/name_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/spinner_category_text"
                android:id="@+id/category_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Description"
                android:maxLines="1"
                android:id="@+id/description_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_date"
                android:id="@+id/date_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_place"
                android:id="@+id/place_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/input_contact"
                android:id="@+id/contact_detail_view"
                android:elegantTextHeight="false"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_margin="20dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>




